server/config/k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  namespace: spi-server
  name: spi-server-file-retriever-server-service-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: spi-server-file-retriever-server-service
            port:
              number: 8000
        path: "/"
        pathType: ImplementationSpecific
